force-app/main/default/objects/Opportunity_Snapshot_Open__c/Opportunity_Snapshot_Open__c.object-meta.xml
<CustomObject>
    <description>Snapshot of open opportunities each week</description>
    <label>Opportunity Snapshot: Open</label>
    <nameField>
        <displayFormat>Open-{0000000}</displayFormat>
        <label>Opportunity Snapshot: Open Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Snapshot: Open</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>