force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/AccountID__c.field-meta.xml
<CustomField>
    <fullName>AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>AccountID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Snapshot: Open (AccountID)</relationshipLabel>
    <relationshipName>Opportunity_Snapshot_Open1</relationshipName>
    <type>Lookup</type>
</CustomField>