force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Branch_ID__c.field-meta.xml
<CustomField>
    <fullName>Branch_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Branch ID on product</description>
    <label>Branch ID</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunity Snapshot: Open (Branch ID)</relationshipLabel>
    <relationshipName>Opportunity_Snapshot_Open</relationshipName>
    <type>Lookup</type>
</CustomField>