force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/OpportunityID__c.field-meta.xml
<CustomField>
    <fullName>OpportunityID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OpportunityID</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity Snapshot: Open</relationshipLabel>
    <relationshipName>Opportunity_Snapshot_Open</relationshipName>
    <type>Lookup</type>
</CustomField>