force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Account_Owner__c</fullName>
    <description>Account owner at the time of the snapshot</description>
    <label>Snapshot: Account Owner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>