force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Account_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Account_Owner_Manager__c</fullName>
    <description>Snapshot: Account Owner manager at the time</description>
    <label>Snapshot: Account Owner Manager</label>
    <length>120</length>
    <type>Text</type>
</CustomField>