force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Amount__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Amount__c</fullName>
    <description>Amount at time of snapshot</description>
    <label>Snapshot: Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>