force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Branch__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Branch__c</fullName>
    <label>Snapshot: Branch</label>
    <length>100</length>
    <type>Text</type>
</CustomField>