force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Branch_description1__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Branch_description1__c</fullName>
    <label>Snapshot: Branch description1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>