force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Close_Date__c</fullName>
    <description>Snapshot of close date at the time</description>
    <label>Snapshot: Close Date</label>
    <type>Date</type>
</CustomField>