force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Key_Account_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Key_Account_Owner_Manager__c</fullName>
    <label>Snapshot: Key Account Owner Manager</label>
    <length>120</length>
    <type>Text</type>
</CustomField>