force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Line_of_Business__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Line_of_Business__c</fullName>
    <description>LOB at time of Snapshot</description>
    <label>Snapshot: Line of Business</label>
    <length>120</length>
    <type>Text</type>
</CustomField>