force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Operating_Segment__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Operating_Segment__c</fullName>
    <description>Operating Segment at time of snapshot</description>
    <label>Snapshot: Operating Segment</label>
    <length>120</length>
    <type>Text</type>
</CustomField>