force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Opportunity_Owner__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Opportunity_Owner__c</fullName>
    <description>Snapshot of Opportunity Owner at the time</description>
    <label>Snapshot: Opportunity Owner</label>
    <length>120</length>
    <type>Text</type>
</CustomField>