force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Opportunity_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Opportunity_Owner_Manager__c</fullName>
    <description>Snapshot: Opportunity Owner Manager at the time</description>
    <label>Snapshot: Opportunity Owner Manager</label>
    <length>120</length>
    <type>Text</type>
</CustomField>