force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Probability__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Probability__c</fullName>
    <description>probability at the time of snapshot</description>
    <label>Snapshot: Probability (%)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>