force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Reporting_Segment__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Reporting_Segment__c</fullName>
    <description>Reporting Segment at time of Snapshot</description>
    <label>Snapshot: Reporting Segment</label>
    <length>120</length>
    <type>Text</type>
</CustomField>