force-app/main/default/objects/Opportunity_Snapshot_Open__c/fields/Snapshot_Stage__c.field-meta.xml
<CustomField>
    <fullName>Snapshot_Stage__c</fullName>
    <description>Snapshot of stage at the time</description>
    <label>Snapshot: Stage</label>
    <length>120</length>
    <type>Text</type>
</CustomField>